syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeDecompositionRequest {
    int64 number = 1;
}

message PrimeDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAvergaeRequest {
    double number = 1;
}

message ComputeAverageResponse {
    double computed_avergae = 1;
}

service CalculatorService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    
    // Server Streaming
    rpc PrimeDecomposition(PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse) {};

    // Client Streaming
    rpc ComputeAverage(stream ComputeAvergaeRequest) returns (ComputeAverageResponse) {};

}